--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %} Django Bookmark List {% endblock %}
+{% block title %}home.html {% endblock %}
 
 {% block header %}
 <header class="masthead" style="background-image: url({% static 'img/home-bg.jpg' %})">
@@ -11,8 +11,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>북마크 페이지</h1>
-            <span class="subheading">북마크 리스트 입니다.</span>
+            <h1>Clean Blog</h1>
+            <span class="subheading">A Blog Theme by Start Bootstrap</span>
           </div>
         </div>
       </div>
@@ -22,16 +22,7 @@
 
 {% block content %}
 
-<div id="content">
-
-    <h1>Bookmark List</h1>
-
-    <ul>
-        {% for bookmark in object_list %}
-            <li><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark }}</a></li>
-        {% endfor %}
-    </ul>
-</div>
+안녕하세요.
 
 {% endblock %}
 
