--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -1,3 +1,55 @@
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block title %} Post_archive {% endblock %}
+
+{% block header %}
+<header class="masthead" style="background-image: url({% static 'img/home-bg.jpg' %})">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1> 아카이브 </h1>
+            <span class="subheading"> 아카이브 입니다.</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+{% endblock %}
+
+{% block content %}
+<div id="content">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <h1>Post Archives until {% now "N d, Y" %}</h1>
+        <ul>
+            {% for date in date_list %}
+            <li style="display: inline;">
+                <a href="{% url 'blog:post_year_archive' date|date:'y' %}">Year{{date|date:"Y" }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+        <br>
+
+        <div>
+            <ul>
+                {% for post in object_list %}
+                <li>{{ post.modify_dt|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
+                    <a href="{{ post.get_absolute_url  }}"><strong>{{ post.title }}</strong></a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+      </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block extra-script %}{% endblock %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
