--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href={% url 'home' %}>연습 홈페이지</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -37,16 +37,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href= {% url'home' %}>Home</a>
+            <a class="nav-link" href= {% url 'home' %}>Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href= {% url'bookmark:index' %}>Bookmark</a>
+            <a class="nav-link" href= {% url 'bookmark:index' %}>Bookmark</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href= {% url'blog:index' %}>Blog</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href= "#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Blog
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href={% url 'blog:index' %}>Post</a>
+              <a class="dropdown-item" href={% url 'blog:post_archive' %}>Archive</a>
+            </div>
           </li>
+<!--          <li class="nav-item">
+            <a class="nav-link" href= {% url 'blog:index' %}>Blog</a>
+          </li>-->
           <li class="nav-item">
-            <a class="nav-link" href= {% url'admin:index' %}>Admin</a>
+            <a class="nav-link" href= {% url 'admin:index' %}>Admin</a>
           </li>
         </ul>
       </div>
@@ -59,6 +68,8 @@
 
   <!-- Main Content -->
 {% block content %}
+
+
 {% endblock %}
 
   <!-- Footer -->
