--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href={% url 'blog:index' %}>Post</a>
               <a class="dropdown-item" href={% url 'blog:post_archive' %}>Archive</a>
+              <a class="dropdown-item" href={% url 'blog:tag_cloud' %}>Tag Cloud</a>
             </div>
           </li>
 <!--          <li class="nav-item">
