--- a/blog/templates/blog/post_all.html
+++ b/blog/templates/blog/post_all.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="content">
+<div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         {% for post in posts %}
