--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="content">
+<div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <h1>Post Archives until {% now "N d, Y" %}</h1>
