--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -5,7 +5,7 @@
 {% block title %} Django Bookmark List {% endblock %}
 
 {% block header %}
-<header class="masthead" style="background-image: url({% static 'img/home-bg.jpg' %})">
+<header class="masthead" style="background-image: url({% static 'img/post-bg.jpg' %})">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -22,15 +22,21 @@
 
 {% block content %}
 
-<div id="content">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="post-preview">
+                <h1>Bookmark List</h1>
 
-    <h1>Bookmark List</h1>
 
-    <ul>
-        {% for bookmark in object_list %}
-            <li><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark }}</a></li>
-        {% endfor %}
-    </ul>
+                <ul>
+                    {% for bookmark in object_list %}
+                        <li><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark }}</a></li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
