--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -28,7 +28,7 @@
         <ul>
             {% for date in date_list %}
             <li style="display: inline;">
-                <a href="{% url 'blog:post_year_archive' date|date:'y' %}">Year{{date|date:"Y" }}</a>
+                <a href="{% url 'blog:post_year_archive' date|date:'Y' %}">Year{{date|date:"Y" }}</a>
             </li>
             {% endfor %}
         </ul>
@@ -49,32 +49,3 @@
 {% endblock %}
 
 {% block extra-script %}{% endblock %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Post_archive</title>
-</head>
-<body>
-    <h1>Post Archives until {% now "N d, Y" %}</h1>
-    <ul>
-        {% for date in date_list %}
-        <li style="display: inline;">
-            <a href="{% url 'blog:post_year_archive' date|date:'y' %}">Year{{date|date:"Y" }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-    <br>
-
-    <div>
-        <ul>
-            {% for post in object_list %}
-            <li>{{ post.modify_dt|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
-                <a href="{{ post.get_absolute_url  }}"><strong>{{ post.title }}</strong></a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-</body>
-</html>
