--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,16 @@
 <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+
+        {% for post in posts %}
+          <div class="post-preview">
+            <h3><a href='{{ post.get_absolute_url }}'>{{ post.title }}</a></h3>
+            {{ post.modify_dt|date:"N d, Y"}}
+            <p>{{ post.description }}</p>
+          </div>
+        {% endfor %}
+        <br>
+        <!--
         <div class="post-preview">
           <a href="post.html">
             <h2 class="post-title">
@@ -77,6 +87,8 @@
             on July 8, 2019</p>
         </div>
         <hr>
+        -->
+
         <!-- Pager -->
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="#">Older Posts →</a>
