--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
               <a class="dropdown-item" href={% url 'blog:index' %}>Post</a>
               <a class="dropdown-item" href={% url 'blog:post_archive' %}>Archive</a>
               <a class="dropdown-item" href={% url 'blog:tag_cloud' %}>Tag Cloud</a>
+              <a class="dropdown-item" href={% url 'blog:search' %}>Search</a>
             </div>
           </li>
 <!--          <li class="nav-item">
