--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,7 +1,26 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}register.html{% endblock %}
+{% load static %}
+
+{% block title %} register.html {% endblock %}
+
+{% block header %}
+<header class="masthead" style="background-image: url({% static 'img/about-bg.jpg' %})">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>가입 페이지</h1>
+            <span class="subheading">가입 입니다.</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+{% endblock %}
+
 
 {% block content %}
 
@@ -45,4 +64,3 @@
     </form>
 
 {% endblock %}
-
