--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,50 @@
               <a class="dropdown-item" href={% url 'blog:search' %}>Search</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href= {% url 'photo:index' %}>Photo</a>
+          </li>
+          <li class="nav-item dropdown mx-1 btn btn-primary">
+            <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">Add</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'bookmark:add' %}">Bookmark</a>
+                <a class="dropdown-item" href="{% url 'blog:add' %}">Post</a>
+              <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="">Album</a>
+                <a class="dropdown-item" href="">Photo</a>
+             </div>
+          </li>
+          <li class="nav-item dropdown mx-1 btn btn-primary">
+            <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">Change</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'bookmark:change' %}">Bookmark</a>
+                <a class="dropdown-item" href="{% url 'blog:change' %}">Post</a>
+              <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="">Album</a>
+                <a class="dropdown-item" href="">Photo</a>
+             </div>
+          </li>
+          <ul class="navbar-nav ml-5 mr-5">
+            <li class="nav-item dropdown">
+              {% if user.is_active %}
+              <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">
+                <i class="fas fa-user"></i>&ensp;{% firstof user.get_short_name user.get_username %}&ensp;
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
+               </div>
+              {% else %}
+              <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">
+                <i class="fas fa-user"></i>&ensp;Anonymous&ensp;
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+                <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+              </div>
+              {% endif %}
+            </li>
+          </ul>
 <!--          <li class="nav-item">
             <a class="nav-link" href= {% url 'blog:index' %}>Blog</a>
           </li>-->
