--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,25 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block title %}logged_out.html{% endblock %}
+{% load static %}
+
+{% block title %} logged_out.html {% endblock %}
+
+{% block header %}
+<header class="masthead" style="background-image: url({% static 'img/about-bg.jpg' %})">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>로그아웃 페이지</h1>
+            <span class="subheading">로그아웃 입니다.</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+{% endblock %}
+
 
 {% block content %}
 
@@ -17,3 +36,6 @@
 
 {% endblock %}
 
+
+
+{% block extra-script %}{% endblock %}
