--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,13 +1,35 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block title %}password_change_done.html{% endblock %}
+{% load static %}
+
+{% block title %} password_change_done.html {% endblock %}
+
+{% block header %}
+<header class="masthead" style="background-image: url({% static 'img/about-bg.jpg' %})">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>비밀번호 변경 완료 페이지</h1>
+            <span class="subheading">비밀번호 변경 완료 입니다.</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+{% endblock %}
+
 
 {% block content %}
 
-    <h1>{{ title }}</h1> 
+    <h1>{{ title }}</h1>
     <br>
 
-    <p>Your password was changed!</p> 
+    <p>Your password was changed!</p>
 
 {% endblock %}
 
+
+
+{% block extra-script %}{% endblock %}
