--- a/blog/templates/blog/post_change_list.html
+++ b/blog/templates/blog/post_change_list.html
@@ -19,35 +19,40 @@
 {% endblock %}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <h1>Post Change - {{user}}</h1>
+        <br>
 
-    <h1>Post Change - {{user}}</h1>
-    <br>
+        <table class="table table-bordered table-sm table-striped">
 
-    <table class="table table-bordered table-sm table-striped">
+            <thead>
+            <tr class="table-primary">
+                <th>Title</th>
+                <th>Description</th>
+                <th>Owner</th>
+                <th>Update</th>
+                <th>Delete</th>
+            </tr>
+            </thead>
 
-        <thead>
-        <tr class="table-primary">
-            <th>Title</th>
-            <th>Description</th>
-            <th>Owner</th>
-            <th>Update</th>
-            <th>Delete</th>
-        </tr>
-        </thead>
+            <tbody>
+            {% for item in object_list %}
+            <tr>
+                <td>{{ item.title }}</td>
+                <td>{{ item.description }}</td>
+                <td>{{ item.owner }}</td>
+                <td><a href="{% url 'blog:update' item.id %}">Update</a></td>
+                <td><a href="{% url 'blog:delete' item.id %}">Delete</a></td>
+            </tr>
+            {% endfor %}
+            </tbody>
 
-        <tbody>
-        {% for item in object_list %}
-        <tr>
-            <td>{{ item.title }}</td>
-            <td>{{ item.description }}</td>
-            <td>{{ item.owner }}</td>
-            <td><a href="{% url 'blog:update' item.id %}">Update</a></td>
-            <td><a href="{% url 'blog:delete' item.id %}">Delete</a></td>
-        </tr>
-        {% endfor %}
-        </tbody>
-
-    </table>
+        </table>
+      </div>
+    </div>
+</div>
 
 {% endblock %}
 
