--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -60,9 +60,7 @@
 
 
 
-      </div>
-    </div>
-</div>
+
 {% endblock %}
 
 {% block extra-script %}
@@ -75,7 +73,7 @@
 
 var disqus_config = function () {
     this.page.url = '{{ disqus_url }}';  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = {{ disqus_id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.identifier = '{{ disqus_id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
@@ -91,3 +89,6 @@ var disqus_config = function () {
 
 {% endblock %}
 
+      </div>
+    </div>
+</div>
