--- a/templates/base.html
+++ b/templates/base.html
@@ -56,8 +56,8 @@
           <li class="nav-item">
             <a class="nav-link" href= {% url 'photo:index' %}>Photo</a>
           </li>
-          <li class="nav-item dropdown mx-1 btn btn-primary">
-            <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">Add</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href= "#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add</a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="{% url 'bookmark:add' %}">Bookmark</a>
                 <a class="dropdown-item" href="{% url 'blog:add' %}">Post</a>
@@ -66,8 +66,8 @@
                 <a class="dropdown-item" href="">Photo</a>
              </div>
           </li>
-          <li class="nav-item dropdown mx-1 btn btn-primary">
-            <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">Change</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href= "#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Change</a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="{% url 'bookmark:change' %}">Bookmark</a>
                 <a class="dropdown-item" href="{% url 'blog:change' %}">Post</a>
@@ -79,7 +79,7 @@
           <ul class="navbar-nav ml-5 mr-5">
             <li class="nav-item dropdown">
               {% if user.is_active %}
-              <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">
+              <a class="nav-link dropdown-toggle" href= "#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-user"></i>&ensp;{% firstof user.get_short_name user.get_username %}&ensp;
               </a>
               <div class="dropdown-menu">
