--- a/templates/base.html
+++ b/templates/base.html
@@ -62,8 +62,8 @@
                 <a class="dropdown-item" href="{% url 'bookmark:add' %}">Bookmark</a>
                 <a class="dropdown-item" href="{% url 'blog:add' %}">Post</a>
               <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="">Album</a>
-                <a class="dropdown-item" href="">Photo</a>
+                <a class="dropdown-item" href="{% url 'photo:album_add' %}">Album</a>
+                <a class="dropdown-item" href="{% url 'photo:photo_add' %}">Photo</a>
              </div>
           </li>
           <li class="nav-item dropdown">
@@ -72,8 +72,8 @@
                 <a class="dropdown-item" href="{% url 'bookmark:change' %}">Bookmark</a>
                 <a class="dropdown-item" href="{% url 'blog:change' %}">Post</a>
               <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="">Album</a>
-                <a class="dropdown-item" href="">Photo</a>
+                <a class="dropdown-item" href="{% url 'photo:album_add' %}">Album</a>
+                <a class="dropdown-item" href="{% url 'photo:photo_add' %}">Photo</a>
              </div>
           </li>
           <ul class="navbar-nav ml-5 mr-5">
